--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,3 +1,6 @@
 <h1>Edit existing article</h1>
 
 <%= render 'form' %>
+
+<%= link_to 'Cancel', article_path(@article) %>
+<%= link_to 'All Articles', articles_path %>
