--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -12,7 +12,8 @@
 		<td><%= article.title %></td>
 		<td><%= article.description %></td>
 		<td><%= link_to 'show', article_path(article) %></td>
-		<td><%= link_to 'edit', edit_article_path(article) %></td>		
+		<td><%= link_to 'edit', edit_article_path(article) %></td>
+		<td><%= link_to 'delete', article_path(article), method: :delete, data: {confirm: "Are you sure you want to delete this article?"} %></td>
 	</tr>
 	<% end %>
 </table>
