--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,7 +5,7 @@
 </p>
 
 <p>
-	Description: <%= @article.description %>
+	Description: <%= @article.description.html_safe %>
 </p>
 
 <%= link_to 'Edit', edit_article_path(@article) %> |
