--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,28 +1,3 @@
 <h1>All Articles</h1>
 
-<p>
-	<%= link_to 'Creat New Article', new_article_path %> 
-</p>
-
-<table>
-	<th>Title</th>
-	<th>Description</th>
-	<th>Created By</th>
-	<th>Date Created</th>
-	<th>Last Updated</th>
-	
-	<% @articles.each do |article| %>
-	<tr>
-		<td><%= article.title %></td>
-		<td><%= article.description %></td>
-		<td><%= article.user.username if article.user %></td> 
-		<td><%= time_ago_in_words(article.created_at) %></td>
-		<td><%= time_ago_in_words(article.updated_at) %></td>
-
-		<td><%= link_to 'show', article_path(article) %></td>
-		<td><%= link_to 'edit', edit_article_path(article) %></td>
-		<td><%= link_to 'delete', article_path(article), method: :delete, data: {confirm: "Are you sure you want to delete this article?"} %></td>
-	</tr>
-	<% end %>
-	
-</table>
+<%=  render 'article', obj: @articles %>
