--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,5 +8,14 @@
 	Description: <%= @article.description.html_safe %>
 </p>
 
+<% if @article.user %>
+	<h4>The Author</h4>
+		<ul>
+			<li><%= link_to gravatar_for(@article.user), user_path(@article.user) %></li>
+			<li><%= link_to @article.user.username, user_path(@article.user) %></li>
+			<li><%= pluralize(@article.user.articles.count, "article") if @article.user.articles %></li>
+		</ul>
+<% end %>
+
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'All Articles', articles_path %> 
