--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,7 @@
 <h1>All Bloggers</h1>
 
+
+<p><%= will_paginate %></p>
 <% @users.each do |user| %>
 
 	<ul>
@@ -9,3 +11,4 @@
 	</ul>
 
 <% end %>
+<p><%= will_paginate %></p>
