--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,5 +3,5 @@
 <%= gravatar_for @user, size: 150 %>
 
 <h4><%= @user.username %>'s articles</h4>
-
-<%= render 'articles/article', obj: @user.articles %>
+<%= render 'articles/article', obj: @user_articles %>
+<%= will_paginate @user_articles %>
