--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -16,10 +16,12 @@
 		<td><%= article.user.username if article.user %></td> 
 		<td><%= time_ago_in_words(article.created_at) %></td>
 		<td><%= time_ago_in_words(article.updated_at) %></td>
-
 		<td><%= link_to 'show', article_path(article) %></td>
-		<td><%= link_to 'edit', edit_article_path(article) %></td>
-		<td><%= link_to 'delete', article_path(article), method: :delete, data: {confirm: "Are you sure you want to delete this article?"} %></td>
+
+		<% if logged_in? && current_user == article.user %>
+			<td><%= link_to 'edit', edit_article_path(article) %></td>
+			<td><%= link_to 'delete', article_path(article), method: :delete, data: {confirm: "Are you sure you want to delete this article?"} %></td>
+		<% end %>
 	</tr>
 	<% end %>
 	
