--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -18,7 +18,7 @@
 		<td><%= time_ago_in_words(article.updated_at) %></td>
 		<td><%= link_to 'show', article_path(article) %></td>
 
-		<% if logged_in? && current_user == article.user %>
+		<% if logged_in? && (current_user == article.user  || current_user.admin?) %>
 			<td><%= link_to 'edit', edit_article_path(article) %></td>
 			<td><%= link_to 'delete', article_path(article), method: :delete, data: {confirm: "Are you sure you want to delete this article?"} %></td>
 		<% end %>
