--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -16,7 +16,7 @@
 			<li><%= pluralize(@article.user.articles.count, "article") if @article.user.articles %></li>
 		</ul>
 <% end %>
-<% if logged_in? && current_user == @article.user %>
+<% if logged_in? && (current_user == @article.user || current_user.admin?) %>
 	<%= link_to 'Edit', edit_article_path(@article) %> |
 <% end %>
 <%= link_to 'All Articles', articles_path %> 
