--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,6 +8,9 @@
 		<li><%= link_to gravatar_for(user), user_path(user) %></li>
 		<li><%= link_to user.username, user_path(user) %></li>
 		<li><%= pluralize(user.articles.count, "article") if user.articles %></li>
+		<% if logged_in? && current_user.admin? %>
+			<li><%= link_to "Delete User", user_path(user), method: :delete, data: { confirm: "Are you sure you want to deete this user?"} %></li>
+		<% end %>
 	</ul>
 
 <% end %>
