--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,33 @@
  *= require_tree .
  *= require_self
  */
+
+/* convert to scss later*/
+
+/* NAV */
+* {margin: 0px;}
+nav {
+	width: 100%;
+	padding-bottom: 20px;
+
+	display: flex;
+	flex-direction: row;
+	justify-content: center ;
+	align-items: baseline;
+
+	color: white;
+	background-color: black;
+}
+nav ul {
+	list-style: none;
+}
+ nav p, nav div {
+ 	display: inline-block;
+ 	/*border: 1px solid magenta;*/
+ 	padding: 20px
+ }
+ nav a {
+ 	color: white;
+ 	text-decoration: none;
+ }
+ nav a:hover {color: orange;}
