--- a/app/views/layouts/_navi.html.erb
+++ b/app/views/layouts/_navi.html.erb
@@ -1,26 +1,33 @@
-<p>
-
-	Hi, I am Nav Bar 
-	| <%= link_to 'Articles', articles_path %>
-	| <%= link_to 'Users', users_path %>
 
 
-	<% if logged_in? %>
+<nav>
+	<p><%= link_to 'Articles', articles_path %></p>
+	<p><%= link_to 'Users', users_path %></p>
 
-	| <%= link_to 'Logout', logout_path, method: :delete %>
+	<div>
+		<%= link_to 'Categories', '#' %>
+		<ul>
+			<li><%= link_to 'All Categories', categories_path %></li>
 
-	| <%= link_to 'Edit Profile', edit_user_path(current_user) %>
-	| <%= link_to 'Profile Page', user_path(current_user) %>
-	<%= "(Admin)" if current_user.admin? %>
-	| <%= link_to 'New Article', new_article_path %>
+			<% Category.all.each do |category| %>
+			<li><%= link_to "#{category.name}", category_path(category) %></li>
+			<% end %>
 
+			<% if logged_in? && current_user.admin? %>
+			<li><%= link_to '+ Add New Category', new_category_path %></li>
+			<% end %>
 
-	<% else %>
+		</ul>
+	</div>
 
-	| <%= link_to 'Login', login_path %>
-	| <%= link_to 'Sign Up', signup_path %>
-
+	<% if logged_in? %>	
+	<p><%= link_to 'New Article', new_article_path %></p>
+	<p><%= link_to 'Edit Profile', edit_user_path(current_user) %></p>
+ 	<p><%= link_to 'Profile Page', user_path(current_user) %>
+	<%= "(Admin)" if current_user.admin? %></p>
+ 	<p><%= link_to 'Logout', logout_path, method: :delete %></p>
+ 	<% else %>
+ 	<p><%= link_to 'Login', login_path %></p>
+ 	<p><%= link_to 'Sign Up', signup_path %></p>
 	<% end %>
-
-
-</p>
+</nav>
