--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -16,6 +16,11 @@
 	<%= f.label :description %><br/>
 	<%= f.text_area :description %>
 </p>
+
+
+<%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |cb| %>
+  <% cb.label(class: "checkbox-inline input_checkbox") {cb.check_box(class: "checkbox") + cb.text} %>
+  <% end %> 
 <p>
 	<%= f.submit %>
 </p>
