--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -5,6 +5,7 @@
 
 	<ul>
 		<li><%= link_to "#{category.name}", category_path(category) %></li>
+		<li><%= pluralize(category.articles.count, "article") %></li>
 	</ul>
 
 <% end %>
