installed and started using bootstrap

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,19 +14,26 @@
  *= require_self
  */
 
-/* convert to scss later*/
+
+
+
+
+
+
+
 
 /* THEME */
-* {margin: 0px;}
+/** {margin: 0px;}*/
 /*pagination*/
-div .pagination {float: right}
+/*div .pagination {float: right}
 .pagination ul {float: right}
-.pagination ul li {display: inline-block}
+.pagination ul li {display: inline-block}*/
 
 
 
 /* NAV */
-nav {
+
+/*nav {
 	width: 100%;
 	padding-bottom: 20px;
 
@@ -41,17 +48,17 @@ nav {
 nav ul {list-style: none}
 nav p, nav div {
  	display: inline-block;
- 	/*border: 1px solid magenta;*/
  	padding: 20px
  }
  nav a {
  	color: white;
  	text-decoration: none;
  }
- nav a:hover {color: orange}
+ nav a:hover {color: orange}*/
 
 /* APPLICATION.html.erb */
-.container {
+
+/*.container {
 	width: 100%;
 	padding-bottom: 100px;
 
@@ -60,7 +67,7 @@ nav p, nav div {
 	justify-content: center;
 }
 .container-helper {width: 800px}
-
+*/
 
 
 
