--- a/app/views/layouts/_navi.html.erb
+++ b/app/views/layouts/_navi.html.erb
@@ -1,33 +1,48 @@
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Alpha Blerg</a>
+    </div>
 
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><%= link_to 'Articles', articles_path %></li>
+        <li><%= link_to 'Users', users_path %></li>
 
-<nav>
-	<p><%= link_to 'Articles', articles_path %></p>
-	<p><%= link_to 'Users', users_path %></p>
-
-	<div>
-		<%= link_to 'Categories', '#' %>
-		<ul>
-			<li><%= link_to 'All Categories', categories_path %></li>
-
-			<% Category.all.each do |category| %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <% Category.all.each do |category| %>
 			<li><%= link_to "#{category.name}", category_path(category) %></li>
 			<% end %>
-
 			<% if logged_in? && current_user.admin? %>
+			<li role="separator" class="divider"></li>
 			<li><%= link_to '+ Add New Category', new_category_path %></li>
 			<% end %>
+          </ul>
+        </li>
+      </ul>
 
-		</ul>
-	</div>
-
-	<% if logged_in? %>	
-	<p><%= link_to 'New Article', new_article_path %></p>
-	<p><%= link_to 'Edit Profile', edit_user_path(current_user) %></p>
- 	<p><%= link_to 'Profile Page', user_path(current_user) %>
-	<%= "(Admin)" if current_user.admin? %></p>
- 	<p><%= link_to 'Logout', logout_path, method: :delete %></p>
- 	<% else %>
- 	<p><%= link_to 'Login', login_path %></p>
- 	<p><%= link_to 'Sign Up', signup_path %></p>
-	<% end %>
+      <ul class="nav navbar-nav navbar-right">
+        	<% if logged_in? %>	
+			<li><%= link_to 'New Article', new_article_path %></li>
+			<li><%= link_to 'Edit Profile', edit_user_path(current_user) %></li>
+		 	<li><%= link_to 'Profile Page', user_path(current_user) %>
+			<%= "(Admin)" if current_user.admin? %></li>
+		 	<li><%= link_to 'Logout', logout_path, method: :delete %></li>
+		 	<% else %>
+		 	<li><%= link_to 'Login', login_path %></li>
+		 	<li><%= link_to 'Sign Up', signup_path %></li>
+			<% end %>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
 </nav>
